# Elite_Robots_CS_SDK

./: CMakeLists.txt
doc/API/cn/: EliteDriver.cn.md
example/: CMakeLists.txt
example/kinematics_example/: CMakeLists.txt
example/kinematics_example/example/: example_Kdl_kinematics.cpp
example/kinematics_example/include/elite_kinematics/: kdl_kinematics_example.hpp
example/kinematics_example/src/: kdl_kinematics_example.cpp
include/Common/: kinematics.hpp
include/Control/: ScriptCommandInterface.hpp
include/Elite/: DataType.hpp  EliteDriver.hpp
include/Kinematics/: kinematics_base.hpp
source/Common/: Kinematics.cpp
source/Control/: ScriptCommandInterface.cpp
source/Elite/: EliteDriver.cpp
source/Kinematics/: kinematics_base.cpp
source/resources/: external_control.script
